--- a/wiki/API_Docs.wiki
+++ b/wiki/API_Docs.wiki
@@ -416,6 +416,8 @@ void *crn_decompress_crn_to_dds(const void *pCRN_file_data, crn_uint32 &file_siz
 
 For more control over decompression (particularly over memory management, and to implement palette caching), see the lower-level helper functions in [http://code.google.com/p/crunch/source/browse/trunk/inc/crn_decomp.h inc/crn_decomp.h], which do not depend at all on crnlib.
 
+See [http://code.google.com/p/crunch/source/browse/trunk/example1/example1.cpp example1.cpp] for a usage example of this function.
+
 == Decompressing ==
 
 === crn_decompress_dds_to_images function ===
