--- a/wiki/API_Docs.wiki
+++ b/wiki/API_Docs.wiki
@@ -16,7 +16,7 @@
 
 == Introduction ==
 
-crnlib is a C++ library designed to be statically linked into the calling application. It can compress to .CRN, regular .DDS, or clustered .DDS files. It can also transcode .CRN to .DDS, and unpack .DDS files to individual 24/32-bit images. Finally, for completeness and testing, crnlib's high-quality DXTn block compressor is also exposed. 
+crnlib is a C++ library designed to be statically linked into the calling application. It can compress to .CRN, regular .DDS, or clustered .DDS files. It can also transcode .CRN to .DDS, and unpack .DDS files to individual 24/32-bit images. For completeness, crnlib's high-quality DXTn block compressor is also accessible. 
 
 The library does not use C++ exceptions, but it does use some C++ features such as templates, virtuals, and heap allocation. Due to porting, exception, and inconsistent performance issues (especially in debug builds) crnlib uses custom containers instead of STL.
 
