--- a/wiki/API_Docs.wiki
+++ b/wiki/API_Docs.wiki
@@ -35,9 +35,7 @@ Currently crnlib is Win32 only, but it already compiles with GCC so a Linux/BSD/
 
 == Public API Overview ==
 
-There are two header files of interest, both under the [http://code.google.com/p/crunch/source/browse/trunk/#trunk%2Finc inc] directory.
-
-crnlib exposes a simple high level, C-style function based API, defined in the single public header file [http://code.google.com/p/crunch/source/browse/trunk/inc/crnlib.h inc/crnlib.h]. 
+There are two header files of interest, both under the [http://code.google.com/p/crunch/source/browse/trunk/#trunk%2Finc inc] directory. crnlib exposes a simple high level, C-style function based API, which is defined in the single public header file [http://code.google.com/p/crunch/source/browse/trunk/inc/crnlib.h inc/crnlib.h]. 
 
 The second header file, [http://code.google.com/p/crunch/source/browse/trunk/inc/crn_decomp.h inc/crn_decomp.h], contains all the functionality needed to transcode .CRN files to raw DXTn bits. It does not depend on crnlib in any way, although crnlib internally uses `crn_decomp.h` itself to transcode, examine, and validate .CRN files.
 
