--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -9,7 +9,7 @@ crnlib/crunch don't build under Linux yet, but the stand-alone transcoder header
 
 == [http://code.google.com/p/crunch/source/browse/trunk/example1/example1.cpp example1] ==
 Demonstrates how to use crnlib's high-level C-helper
-compression/decompression/transcoding functions in inc/crnlib.h. It's a
+compression/decompression/transcoding functions in [http://code.google.com/p/crunch/source/browse/trunk/inc/crnlib.h inc/crnlib.h]. It's a
 fairly complete example of crnlib's functionality.
 
 == [http://code.google.com/p/crunch/source/browse/trunk/example2/example2.cpp example2] ==
