--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -23,7 +23,7 @@ into your application.
 
 == [http://code.google.com/p/crunch/source/browse/trunk/example3/example3.cpp example3] ==
 Shows how to use the regular, low-level DXTn block compressor
-functions in inc/crnlib.h. This functionality is included for
+functions in [http://code.google.com/p/crunch/source/browse/trunk/inc/crn_decomp.h inc/crnlib.h]. This functionality is included for
 completeness. (Your engine or toolchain most likely already has its own
 DXTn compressor. crnlib's compressor is typically very competitive or
 superior to most available closed and open source CPU-based
