--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -3,7 +3,7 @@
 
 = Building the Examples =
 
-{{{crn.2008.sln}}} builds crnlib and the command line tool, and {{{crn_examples.2008.sln}}} builds the examples. Both are Visual Studio 2008 (VC9) solution file containing projects for Win32 and x64. crnlib itself also builds with VS2005, VS2010, and gcc 4.5.0 (TDM GCC+MinGW).  A codeblocks 10.05 workspace and project file is also included, but compiling crnlib this way hasn't been tested much.
+{{{crn.2008.sln}}} builds crnlib and the command line tool, and {{{crn_examples.2008.sln}}} builds the examples. Both are Visual Studio 2008 (VC9) solution file containing projects for Win32 and x64. crnlib itself also builds with VS2005, VS2010, and gcc 4.5.0 ([http://tdm-gcc.tdragon.net/ TDM GCC+MinGW]).  A codeblocks 10.05 workspace and project file is also included, but compiling crnlib this way hasn't been tested much.
 
 crnlib/crunch don't build under Linux yet, but the stand-alone transcoder header file library [http://code.google.com/p/crunch/source/browse/trunk/inc/crn_decomp.h inc/crn_decomp.h] should compile and work fine under Linux.
 
