--- a/wiki/Stats.wiki
+++ b/wiki/Stats.wiki
@@ -1,9 +1,10 @@
 #summary Statistics
 
+This is a work in progress:
 
-Here's a spreadsheet comparing the RGB [http://en.wikipedia.org/wiki/RMSE RMSE] (root mean square error) RYG's real-time DXT1 compressor, crnlib's DXT1 compressor using uniform or perceptual metrics, vs. .CRN at .75, 1.0, 1.25, 1.5, 1.75, and 2.0bpp:
+Here's a spreadsheet comparing the RGB [http://en.wikipedia.org/wiki/RMSE RMSE] (root mean square error) of RYG's real-time DXT1 compressor, crnlib's DXT1 compressor using uniform or perceptual metrics, vs. .CRN at .75-2.0bpp at .25bpp increments. This spreadsheet also has two columns showing how many bits/pixel are needed by LZMA to compress DXT1 uniform and perceptual .DDS files.
 
 [http://www.tenacioussoftware.com/crn_stats/dec29/crn_stats_dec_29.htm] 
 
-And here's the raw excel file:
+Here's the raw excel file:
 [http://www.tenacioussoftware.com/crn_stats/dec29/crn_stats_dec_29.xlsx Excel Spreadsheet file]
