--- a/wiki/Stats.wiki
+++ b/wiki/Stats.wiki
@@ -7,4 +7,4 @@ Here's a [http://www.tenacioussoftware.com/crn_stats/dec29/crn_stats_dec_29.htm 
 
 Here's the [http://www.tenacioussoftware.com/crn_stats/dec29/crn_stats_dec_29.xlsx raw Excel spreadsheet file].
 
-These RMSE values should be comparable to the values in Charles Bloom's excellent [http://cbloomrants.blogspot.com/2008/11/11-20-08-dxtc-part-3.html blog post] comparing various DXT1 compressors. (My RYG RMSE stats are very slightly different from the ones here, and I don't know exactly why, but I'm guessing our versions are slightly different.)
+These RMSE values should be comparable to the values in Charles Bloom's very useful [http://cbloomrants.blogspot.com/2008/11/11-20-08-dxtc-part-3.html blog post] comparing various DXT1 compressors. (My RYG RMSE stats are very slightly different from the ones here, and I don't know exactly why, but I'm guessing our versions are slightly different.)
