--- a/wiki/Stats.wiki
+++ b/wiki/Stats.wiki
@@ -13,9 +13,8 @@ These RMSE values should be comparable to the values in Charles Bloom's very use
 
 == Comparison Images == 
 
+crnlib .DXT1 (uniform colorspace metrics), RMSE: 8.29, .DDS+LZMA: 2.95 bpp
 http://www.tenacioussoftware.com/crn_stats/kodim14_pics/kodim14_dds_uniform.png
-
-
 
 
 
