--- a/wiki/Stats.wiki
+++ b/wiki/Stats.wiki
@@ -18,3 +18,21 @@ http://www.tenacioussoftware.com/crn_stats/kodim14_pics/kodim14_dds_uniform.png
 
 *RYG DXT1*, RMSE: 8.97
 http://www.tenacioussoftware.com/crn_stats/kodim14_pics/kodim14_dds_ryg.png
+
+*CRN DXT1 2.0 bpp*, RMSE: 10.36
+http://www.tenacioussoftware.com/crn_stats/kodim14_pics/kodim14_crn_2_00.png
+
+*CRN DXT1 1.75 bpp*, RMSE: 11.23
+http://www.tenacioussoftware.com/crn_stats/kodim14_pics/kodim14_crn_1_75.png
+
+*CRN DXT1 1.5 bpp*, RMSE: 12.44
+http://www.tenacioussoftware.com/crn_stats/kodim14_pics/kodim14_crn_1_50.png
+
+*CRN DXT1 1.25 bpp*, RMSE: 14.2
+http://www.tenacioussoftware.com/crn_stats/kodim14_pics/kodim14_crn_1_25.png
+
+*CRN DXT1 1.0 bpp*, RMSE: 16.75
+http://www.tenacioussoftware.com/crn_stats/kodim14_pics/kodim14_crn_1_00.png
+
+*CRN DXT1 .75bpp*, RMSE: 20.69
+http://www.tenacioussoftware.com/crn_stats/kodim14_pics/kodim14_crn_0_75.png
