--- a/wiki/Stats.wiki
+++ b/wiki/Stats.wiki
@@ -11,7 +11,7 @@ These RMSE values should be comparable to the values in Charles Bloom's very use
 
 == Comparison Images ==
 
-Sorted by highest to lowest quality. It's pretty clear that .CRN's subjective quality starts dropping fast around ~1.0 bpp. (Better coding at the .CRN backend would make a big difference at these bitrates.)
+Ordered by highest to lowest quality. It's pretty clear that .CRN's subjective quality starts dropping fast around ~1.0 bpp. (Better coding at the .CRN backend would make a big difference at these bitrates.)
 
 *crnlib DXT1* (uniform colorspace metrics), RMSE: 8.29, .DDS+LZMA: 2.95 bpp
 http://www.tenacioussoftware.com/crn_stats/kodim14_pics/kodim14_dds_uniform.png
