--- a/wiki/Stats.wiki
+++ b/wiki/Stats.wiki
@@ -25,9 +25,9 @@ These .JPG files where then unpacked to 24-bit RGB (using the decompressor in [h
 
 [http://www.tenacioussoftware.com/crn_stats/dec29/crn_vs_jpg_stats_dec29.xlsx Raw Excel spreadsheet]
 
-This test shows that, in an RMSE sense, CRN is comparable to JPG+RYG_DXT1 at 1.0-1.25bpp. At less than 1.0bpp, CRN is worse, and beginning at roughly 1.25bpp CRN is generally superior than using JPEG followed by real-time DXT1 compression. 
+This test shows that, in an RMSE sense, CRN is roughly comparable to JPG+RYG_DXT1 at 1.0-1.25bpp. At less than 1.0bpp, CRN is worse, and beginning at ~1.25bpp CRN is generally superior than JPEG followed by real-time DXT1 compression.
 
-These results are similar to [http://www.jacobstrom.com/publications/StromWennerstenHPG2011.pdf Stromm and Wennersten's results with JPEG followed by ETC1]:
+These results are similar to [http://www.jacobstrom.com/publications/StromWennerstenHPG2011.pdf Stromm and Wennersten's published results of testing JPEG followed by ETC1]:
 
  "If JPEG is used as the transport format, the textures will need to be compressed on-the-ﬂy to a texture compression format such as ETC1 after download. To ﬁnd out how much this transcoding will lower the quality, we compressed the JPEG images to ETC1 and measured the average mean square error. The result was an increased error equivalent to a PSNR drop of 2.02 dB than if just ETC1 encoding were used. Thus even if the JPEGs have equal quality to the proposed scheme, after the transcoding there will be a signiﬁcant quality penalty. The transcoding used slow exhaustive compression—fast transcoding will give an even higher penalty"
 
