--- a/wiki/Stats.wiki
+++ b/wiki/Stats.wiki
@@ -25,7 +25,7 @@ These .JPG files where then unpacked to 24-bit RGB (using the decompressor in [h
 
 [http://www.tenacioussoftware.com/crn_stats/dec29/crn_vs_jpg_stats_dec29.xlsx Raw Excel spreadsheet]
 
-This test shows that, in an RMSE sense, CRN is roughly comparable to JPG+RYG_DXT1 at 1.0-1.25bpp. At less than 1.0bpp, CRN is worse, and beginning at ~1.25bpp CRN is generally superior than JPEG followed by real-time DXT1 compression.
+This test shows that, in a RMSE sense, CRN is roughly comparable to JPG+RYG_DXT1 at between 1.0-1.25bpp. At less than 1.0bpp, CRN is worse, and beginning at ~1.25bpp CRN is generally superior than JPEG followed by real-time DXT1 compression.
 
 These results are similar to [http://www.jacobstrom.com/publications/StromWennerstenHPG2011.pdf Stromm and Wennersten's published results of testing JPEG followed by ETC1]:
 
