Edited wiki page Stats through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@217 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/Stats.wiki
+++ b/wiki/Stats.wiki
@@ -23,7 +23,11 @@ These .JPG files where then unpacked to 24-bit RGB (using the decompressor in [h
 
 [http://www.tenacioussoftware.com/crn_stats/dec29/crn_vs_jpg_stats_dec29.xlsx Raw Excel spreadsheet]
 
-This test shows that, in a RMSE sense, CRN is roughly comparable to JPG+RYG_DXT1 at between 1.0-1.25bpp. At less than 1.0bpp, CRN is worse, and beginning at ~1.25bpp CRN is usually better than JPEG followed by real-time DXT1 compression. At 1.5bpp or higher CRN was always equal or better in this test:
+This test shows that, in a RMSE sense, CRN is roughly comparable to JPG+RYG_DXT1 at between 1.0-1.25bpp. At less than 1.0bpp, CRN is worse, and beginning at ~1.25bpp CRN is usually better than JPEG followed by real-time DXT1 compression:
+
+http://www.tenacioussoftware.com/crn_stats/dec29/crn_vs_jpg_1_25.png
+
+At 1.5bpp or higher CRN was always equal or better in this test:
 
 http://www.tenacioussoftware.com/crn_stats/dec29/crn_vs_jpg_1_5.png
 
