--- a/wiki/Stats.wiki
+++ b/wiki/Stats.wiki
@@ -23,11 +23,15 @@ These .JPG files where then unpacked to 24-bit RGB (using the decompressor in [h
 
 [http://www.tenacioussoftware.com/crn_stats/dec29/crn_vs_jpg_stats_dec29.xlsx Raw Excel spreadsheet]
 
-This test shows that, in a RMSE sense, CRN is roughly comparable to JPG+RYG_DXT1 at between 1.0-1.25bpp. At less than 1.0bpp, CRN is worse, and beginning at ~1.25bpp CRN is usually better than JPEG followed by real-time DXT1 compression:
+This test shows that, in a RMSE sense, CRN is worse than JPG+RYG_DXT1 at less than 1.0bpp. Between 1-1.25bpp, CRN is roughly comparable:
+
+http://www.tenacioussoftware.com/crn_stats/dec29/crn_vs_jpg_1_0.png
+
+And beginning at 1.25bpp CRN is usually better than JPEG followed by real-time DXT1 compression:
 
 http://www.tenacioussoftware.com/crn_stats/dec29/crn_vs_jpg_1_25.png
 
-At 1.5bpp or higher CRN was always equal or better in this test:
+At 1.5bpp or higher CRN was always equal or better:
 
 http://www.tenacioussoftware.com/crn_stats/dec29/crn_vs_jpg_1_5.png
 
