Edited wiki page Stats through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@221 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/Stats.wiki
+++ b/wiki/Stats.wiki
@@ -29,7 +29,7 @@ This test shows that, in a RMSE sense, CRN is worse than JPG+RYG_DXT1 at less th
 
 http://www.tenacioussoftware.com/crn_stats/dec29/crn_vs_jpg_1_0.png
 
-And beginning at 1.25bpp CRN is usually better than JPEG followed by real-time DXT1 compression:
+Beginning at 1.25bpp CRN is usually better than JPEG followed by real-time DXT1 compression:
 
 http://www.tenacioussoftware.com/crn_stats/dec29/crn_vs_jpg_1_25.png
 
