--- a/wiki/Stats.wiki
+++ b/wiki/Stats.wiki
@@ -47,7 +47,7 @@ These RMSE values should be comparable to the values in Charles Bloom's very use
 
 ----
 
-== Comparison Images ==
+== Compressed Images ==
 
 Ordered by highest to lowest quality. It's pretty clear that .CRN's subjective quality starts dropping fast around ~1.0 bpp. (At these bitrates, better coding at the .CRN backend should make a big difference.)
 
