Edited wiki page Stats through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@229 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/Stats.wiki
+++ b/wiki/Stats.wiki
@@ -49,7 +49,7 @@ These RMSE values should be comparable to the values in Charles Bloom's very use
 
 == Compressed Images ==
 
-Ordered by highest to lowest quality. It's pretty clear that .CRN's subjective quality starts dropping fast around ~1.0 bpp. (At these bitrates, better coding at the .CRN backend should make a big difference.)
+Ordered by highest to lowest quality. It's pretty clear that .CRN's subjective quality starts dropping fast around ~1.0 bpp.
 
 *crnlib DXT1* (uniform colorspace metrics), RMSE: 8.29, .DDS+LZMA: 2.95 bpp
 http://www.tenacioussoftware.com/crn_stats/kodim14_pics/kodim14_dds_uniform.png
